[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/Finish Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/DotGothic16-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="Finish Menu" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 424.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.223529, 0.223529, 0.223529, 0.643137 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 24.0
margin_top = 448.0
margin_right = 1000.0
margin_bottom = 576.0

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_right = 322.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Back to Menu"

[node name="Play" type="Button" parent="VBoxContainer"]
margin_left = 326.0
margin_right = 649.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Improve time"

[node name="Next" type="Button" parent="VBoxContainer"]
margin_left = 653.0
margin_right = 976.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Next Track"

[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Next" to="." method="_on_Next_pressed"]
